+gateway.sh/config.env for Docker build, run, test, load, providers add|remove

--- a/config.env
+++ b/config.env
@@ -30,6 +30,16 @@ PORT_AUTOSSH=2774
 PORT_START_GATEWAY=40000
 
 
+# Endpoint Docker repository name
+#
+DOCKER_REPO_NAME=pdc/gateway
+
+
+# Endpoint image save name
+#
+DOCKER_SAVE_NAME=pdc-gateway.tar
+
+
 #############################################
 # Not User Configurable ~ dynamic variables #
 #############################################
