Pushed AutoSSH credentials to config.env

--- a/config.env
+++ b/config.env
@@ -25,6 +25,16 @@ EMAIL_ERRORS=errors@pdc.io
 PORT_AUTOSSH=2774
 
 
+# AutoSSH, initiator
+#
+AUTOSSH_INITIATOR=autossh_initiator
+
+
+# AutoSSH, receiver
+#
+AUTOSSH_RECEIVER=autossh
+
+
 # Port range start
 #
 PORT_START_GATEWAY=40000
@@ -62,4 +72,4 @@ TERM=xterm
 
 # Containers
 #
-DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/autossh_initiator/.ssh/:rw"
+DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/${AUTOSSH_INITIATOR}/.ssh/:rw"
