Test container now set by config.env; added ssh file configuration to gateway.sh

--- a/config.env
+++ b/config.env
@@ -10,14 +10,19 @@
 IP_HUB=142.104.128.120
 
 
+# Disable DNS?  Yes/No (case insensitive)
+#
+DNS_DISABLE=no
+
+
 # Host data folders (don't add /!)
 #
 PATH_SSH_KEYS=/pdc/data/config/ssh/gateways
 
 
-# Notification addresses
+# Test gateway ID
 #
-EMAIL_ERRORS=errors@pdc.io
+TEST_GATEWAY=0
 
 
 # Ports
@@ -69,7 +74,7 @@ LC_ALL=C
 #
 TERM=xterm
 
-
+-v ${PATH_SSH_KEYS}:/home/${AUTOSSH_INITIATOR}/.ssh/:rw
 # Containers
 #
 DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/${AUTOSSH_INITIATOR}/.ssh/:rw"
