config.env - renamed save/load names

--- a/config.env
+++ b/config.env
@@ -30,13 +30,9 @@ TEST_GATEWAY=0
 PORT_AUTOSSH=2774
 
 
-# AutoSSH, initiator
+# AutoSSH accounts
 #
 AUTOSSH_INITIATOR=autossh_initiator
-
-
-# AutoSSH, receiver
-#
 AUTOSSH_RECEIVER=autossh
 
 
@@ -47,12 +43,12 @@ PORT_START_GATEWAY=40000
 
 # Endpoint Docker repository name
 #
-DOCKER_REPO_NAME=pdc/gateway
+DOCKER_REPO_NAME=pdc/gateway-base
 
 
 # Endpoint image save name
 #
-DOCKER_SAVE_NAME=pdc-gateway.tar
+DOCKER_SAVE_NAME=gateway-base
 
 
 #############################################
@@ -74,7 +70,7 @@ LC_ALL=C
 #
 TERM=xterm
 
--v ${PATH_SSH_KEYS}:/home/${AUTOSSH_INITIATOR}/.ssh/:rw
+
 # Containers
 #
 DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/${AUTOSSH_INITIATOR}/.ssh/:rw"
