Revised Dockerfile and simplified config.env for easier use of -e variables at runtime

--- a/config.env
+++ b/config.env
@@ -1,8 +1,4 @@
 # PDC-ENV Configuration File
-#
-###############################
-# User configurable variables #
-###############################
 
 
 # Hub external IP/Address (10.0.2.2 for Vagrant/VirtualBox)
@@ -30,12 +26,6 @@ TEST_GATEWAY=0
 PORT_AUTOSSH=2774
 
 
-# AutoSSH accounts
-#
-AUTOSSH_INITIATOR=autossh_initiator
-AUTOSSH_RECEIVER=autossh
-
-
 # Port range start
 #
 PORT_START_GATEWAY=40000
@@ -51,26 +41,6 @@ DOCKER_REPO_NAME=pdc/gateway-base
 DOCKER_SAVE_NAME=gateway-base
 
 
-#############################################
-# Not User Configurable ~ dynamic variables #
-#############################################
-
-
-# Ubuntu/Debian install mode
-#
-DEBIAN_FRONTEND=noninteractive
-
-
-# MongoDB Language Bug
-#
-LC_ALL=C
-
-
-# Set terminal as xterm for Nano
-#
-TERM=xterm
-
-
 # Containers
 #
-DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/${AUTOSSH_INITIATOR}/.ssh/:rw"
+DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/autossh/.ssh/:rw"
