Modifying to use Docker Hub or local repos

--- a/config.env
+++ b/config.env
@@ -11,11 +11,6 @@ IP_HUB=142.104.128.120
 DNS_DISABLE=no
 
 
-# Host data folders (don't add /!)
-#
-PATH_SSH_KEYS=/pdc/data/config/ssh/gateways
-
-
 # Test gateway ID
 #
 TEST_GATEWAY=0
@@ -31,16 +26,11 @@ PORT_AUTOSSH=2774
 PORT_START_GATEWAY=40000
 
 
-# Endpoint Docker repository name
+# Data container for keys
 #
-DOCKER_REPO_NAME=pdc/gateway-base
-
-
-# Endpoint image save name
-#
-DOCKER_SAVE_NAME=gateway-base
+DATA_CONTAINER=keyholder
 
 
 # Containers
 #
-DOCKER_ENDPOINT="-v ${PATH_SSH_KEYS}:/home/autossh/.ssh/:rw"
+DOCKER_ENDPOINT=""
